--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -1585,8 +1585,9 @@ In this guide, the quasi-likelihood (QL) framework in the \edger{} package is us
 Counts are modelled using NB distributions that account for overdispersion between biological replicates \citep{robinson2008}. 
 Each window can then be tested for significant  differences between counts  for different biological conditions.
 
-It should be noted that any statistical method can be used if it is able to accept a count matrix and a vector of normalization factors (or more generally, a matrix of offsets). 
-The choice of \edger{} is primarily motivated by its performance relative to alternatives \citep{law2014}, though the author's desire to increase his h-index is also a factor.
+Of course, any statistical method can be used if it is able to accept a count matrix and a vector of normalization factors (or more generally, a matrix of offsets). 
+The choice of \edger{} is primarily motivated by its performance relative to some published alternatives \citep{law2014}.
+This author's desire to increase his h-index is also an undeniable factor.
 
 \subsection{Setting up the data}
 A \code{DGEList} object is first formed from the count matrix, library sizes and normalization factors.
@@ -1620,13 +1621,10 @@ design
 
 \subsection{Stabilising estimates with empirical Bayes}
 \label{sec:dispest}
-Under the QL framework, both the QL and NB dispersions are used to model
-biological variability in the data \citep{lund2012}. The former ensures that
-the NB mean-variance relationship is properly specified with appropriate
-contributions from the Poisson and Gamma components. The latter accounts for
-variability and uncertainty in the dispersion estimate. However, limited
-replication in most ChIP-seq experiments means that each window does not
-contain enough information for precise estimation of either dispersion. 
+Under the QL framework, both the QL and NB dispersions are used to model biological variability in the data \citep{lund2012}. 
+The former ensures that the NB mean-variance relationship is properly specified with appropriate contributions from the Poisson and Gamma components. 
+The latter accounts for variability and uncertainty in the dispersion estimate. 
+However, limited replication in most ChIP-seq experiments means that each window does not contain enough information for precise estimation of either dispersion. 
 
 % Both parameters need to be estimated for optimal performance; using too high
 % a value for the NB dispersion means that the QL dispersion can't recover (as
@@ -1635,15 +1633,12 @@ contain enough information for precise estimation of either dispersion.
 % trying to shoehorn a NB mean-variance relationship into a QL mean-varince
 % relationship (asymptotically the same, but different at low counts).
 
-This problem is overcome in \edger{} by sharing information across windows. For
-the NB dispersions, a mean-dispersion trend is fitted across all windows to
-model the mean-variance relationship \citep{mccarthy2012}. The raw QL
-dispersion for each window is estimated after fitting a GLM with the trended NB
-dispersion. Another mean-dependent trend is fitted to the raw QL estimates.  An
-empirical Bayes (EB) strategy is then used to stabilize the raw QL dispersion
-estimates by shrinking them towards the second trend \citep{lund2012}. The
-ideal amount of shrinkage is determined from the heteroskedasticity of the
-data.
+This problem is overcome in \edger{} by sharing information across windows. 
+For the NB dispersions, a mean-dispersion trend is fitted across all windows to model the mean-variance relationship \citep{mccarthy2012}. 
+The raw QL dispersion for each window is estimated after fitting a GLM with the trended NB dispersion. 
+Another mean-dependent trend is fitted to the raw QL estimates.  
+An empirical Bayes (EB) strategy is then used to stabilize the raw QL dispersion estimates by shrinking them towards the second trend \citep{lund2012}. 
+The ideal amount of shrinkage is determined from the heteroskedasticity of the data.
 
 <<eval=FALSE,label=shrinkx>>=
 par(mfrow=c(1,2))
@@ -1656,13 +1651,10 @@ abline(h=0.2, col="red")
 results <- glmQLFTest(y, design, robust=TRUE, plot=TRUE)
 @
 
-The effect of EB stabilisation can be visualized by examining the biological
-coefficient of variation (for the NB dispersion) and the quarter-root deviance
-(for the QL dispersion). These plots can also be used to decide whether the
-fitted trend is appropriate. Sudden irregulaties may be indicative of an
-underlying structure in the data which cannot be modelled with the
-mean-dispersion trend. Discrete patterns in the raw dispersions are indicative
-of low counts and suggest that more aggressive filtering is required.
+The effect of EB stabilisation can be visualized by examining the biological coefficient of variation (for the NB dispersion) and the quarter-root deviance (for the QL dispersion). 
+These plots can also be used to decide whether the fitted trend is appropriate. 
+Sudden irregulaties may be indicative of an underlying structure in the data which cannot be modelled with the mean-dispersion trend. 
+Discrete patterns in the raw dispersions are indicative of low counts and suggest that more aggressive filtering is required.
 
 \setkeys{Gin}{width=0.99\textwidth}
 \begin{center}
@@ -1671,15 +1663,12 @@ of low counts and suggest that more aggressive filtering is required.
 @
 \end{center}
 
-A strong trend may also be observed where the dispersion drops sharply with
-increasing mean. This is due to the disproportionate impact of artifacts such
-as mapping errors and PCR duplicates at low counts. It is difficult to
-accurately fit an empirical curve to these strong trends.  Inaccurate fitting
-means that the dispersions at high abundances are often overestimated. Users
-should check whether removal of the low abundance regions affects the
-dispersion estimate. Large changes upon removal imply that more aggressive
-abundance-based filtering may be desirable, as described in
-Chapter~\ref{chap:filter}.
+A strong trend may also be observed where the dispersion drops sharply with increasing mean. 
+This is due to the disproportionate impact of artifacts such as mapping errors and PCR duplicates at low counts. 
+It is difficult to accurately fit an empirical curve to these strong trends.  
+Inaccurate fitting means that the dispersions at high abundances are often overestimated. 
+Users should check whether removal of the low abundance regions affects the dispersion estimate. 
+Large changes upon removal imply that more aggressive abundance-based filtering may be desirable, as described in Chapter~\ref{chap:filter}.
 
 <<label=rmchecker,eval=FALSE>>=
 yo <- asDGEList(original, norm.factors=normfacs)
@@ -1700,61 +1689,50 @@ legend("topright", c("raw", "filtered"), col=c("black", "grey"), lwd=2)
 \end{center}
 
 \subsection{Modelling heteroskedasticity}
-The heteroskedasticity of the data is modelled in \edger{} by the prior degrees
-of freedom (d.f.). A large value for the prior d.f. indicates that
-heteroskedasticity is low. This means that more EB shrinkage can be performed
-to reduce uncertainty and maximize power. However, strong shrinkage is not
-appropriate if the dispersions are highly variable. Fewer prior degrees of
-freedom (and less shrinkage) is required to maintain type I error control. 
+The heteroskedasticity of the data is modelled in \edger{} by the prior degrees of freedom (d.f.).
+A large value for the prior d.f. indicates that heteroskedasticity is low. 
+This means that more EB shrinkage can be performed to reduce uncertainty and maximize power. 
+However, strong shrinkage is not appropriate if the dispersions are highly variable. 
+Fewer prior degrees of freedom (and less shrinkage) is required to maintain type I error control. 
 
 <<>>=
 summary(results$df.prior)
 @
 
-On occasion, the estimated prior degrees of freedom will be infinite. This is
-indicative of a strong batch effect where the dispersions are large with
-minimal variability. A typical example would involve uncorrected differences in
-IP efficiency across replicates. In severe cases, the trended dispersion may
-fail to pass through the bulk of points as the variability is too low to be
-properly modelled in the QL framework. These batch effects are often caused
-by efficiency biases and can be removed with appropriate normalization.
+On occasion, the estimated prior degrees of freedom will be infinite. 
+This is indicative of a strong batch effect where the dispersions are consistently large.
+A typical example would involve uncorrected differences in IP efficiency across replicates. 
+In severe cases, the trended dispersion may fail to pass through the bulk of points as the variability is too low to be properly modelled in the QL framework. 
+These batch effects are often caused by efficiency biases and can be removed with appropriate normalization.
 
-It is worth pointing out that the prior degrees of freedom should be robustly
-estimated \citep{phipson2013}. Obviously, this protects against large positive
-outliers (e.g. highly variable windows) but it also protects against near-zero
-dispersions at low counts. These will manifest as large negative outliers after
-a log transformation step during estimation \citep{smyth2004}. Without robust
-estimation, incorporation of these outliers will inflate the observed
-variability in the dispersions and reduce DB detection power.
+Note that the prior degrees of freedom should be robustly estimated \citep{phipson2013}. 
+Obviously, this protects against large positive outliers (e.g. highly variable windows) but it also protects against near-zero dispersions at low counts. 
+These will manifest as large negative outliers after a log transformation step during estimation \citep{smyth2004}. 
+Without robustness, incorporation of these outliers will inflate the observed variability in the dispersions.
+This results in a lower estimated prior d.f. and reduced DB detection power.
 
-% If you've forgetten, you get near-zero dispersions because counts can be
-% exactly equal.
+% If you've forgetten, you get near-zero dispersions because counts can be exactly equal.
 
 \section{Testing for DB windows}
-The effect of specific factors can be tested to identify windows with
-significant differential binding. In the QL framework, $p$-values are computed
-using the F-test \citep{lund2012}. This is more appropriate than using the
-likelihood ratio test as the F-test accounts for uncertainty in the dispersion
-estimates. Associated statistics such as log-fold changes and log-counts per
-million are also computed for each window.
+The effect of specific factors can be tested to identify windows with significant differential binding. 
+In the QL framework, $p$-values are computed using the F-test \citep{lund2012}. 
+This is more appropriate than using the likelihood ratio test as the F-test accounts for uncertainty in the dispersion estimates. 
+Associated statistics such as log-fold changes and log-counts per million are also computed for each window.
 
 <<>>=
 results <- glmQLFTest(y, design, robust=TRUE, contrast=c(0, 1))
 head(results$table)
 @
 
-The null hypothesis here is that the cell type has no effect. The
-\code{contrast} argument in the \code{glmQLFTest} function specifies which
-factors are of interest. In this case, a contrast of \code{c(0, 1)} defines the
-null hypothesis as \code{0*intercept + 1*cell.type = 0}, i.e., that the
-log-fold change between cell types is zero. DB windows can then be identified
-by rejecting the null. Specification of the contrast is explained in greater
-depth in the \edger{} user's manual. 
+The null hypothesis here is that the cell type has no effect. 
+The \code{contrast} argument in the \code{glmQLFTest} function specifies which factors are of interest. 
+In this case, a contrast of \code{c(0, 1)} defines the null hypothesis as \code{0*intercept + 1*cell.type = 0}, i.e., that the log-fold change between cell types is zero. 
+DB windows can then be identified by rejecting the null. 
+Specification of the contrast is explained in greater depth in the \edger{} user's manual. 
 
-As a side note, the \code{glmQLFTest} function will perform both the dispersion
-estimation and the hypothesis testing. As such, it only needs to be called
-once. Multiple calls are only shown here and in Section~\ref{sec:dispest} for
-demonstration purposes. 
+As a side note, the \code{glmQLFTest} function will perform both the dispersion estimation and the hypothesis testing. 
+This means that it only needs to be called once for each DB analysis.
+Multiple calls are only shown here and in Section~\ref{sec:dispest} for demonstration purposes. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
